--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -2,107 +2,103 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>IFWL F1 Leaderboard</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: url('ifwl_bg.webp') no-repeat center center fixed;
-      background-size: cover;
-      margin: 0; padding: 20px;
+      font-family: Arial,sans-serif;
+      background: url('ifwl_bg.webp') center/cover no-repeat fixed;
+      margin:0; padding:20px;
     }
-    h1, h2 {
-      text-align: center; color: #000;
-    }
+    h1,h2 { text-align:center; color:#000; }
     .version {
-      position: fixed; top: 10px; left: 10px;
-      font-size: 0.8em; color: #ccc;
+      position:fixed; top:10px; left:10px;
+      font-size:0.8em; color:#ccc;
     }
     .header {
-      display: flex; align-items: center;
-      justify-content: center; gap: 20px;
-      margin-bottom: 10px;
+      display:flex; align-items:center; justify-content:center;
+      gap:20px; margin-bottom:10px;
     }
-    .header img { height: 48px; }
+    .header img { height:48px; }
     .btn {
-      display: inline-block;
-      margin: 0 auto 10px;
-      padding: 8px 16px;
-      background: #222;
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      border-radius: 4px;
+      display:inline-block; margin:0 auto 20px;
+      padding:8px 16px; background:#222; color:#fff;
+      text-decoration:none; border-radius:4px;
+      font-weight:bold;
     }
     table {
-      width: 100%; border-collapse: collapse;
-      background: rgba(0,0,0,0.75);
-      margin: 20px 0; border-radius:8px; overflow:hidden;
-      color:white;
+      width:100%; border-collapse:collapse;
+      background:rgba(0,0,0,0.75);
+      margin:20px 0; border-radius:8px; overflow:hidden;
+      color:#fff;
     }
-    th, td {
-      padding:10px; text-align:center; border-bottom:1px solid #333;
+    th,td {
+      padding:10px; border-bottom:1px solid #333;
+      vertical-align:middle;
     }
     th {
       background:#333; text-transform:uppercase;
-      font-weight:bold; color:#fff;
+      font-weight:bold; text-align:center;
     }
-    tr:hover { background: rgba(255,255,255,0.05); }
+    tr:hover { background:rgba(255,255,255,0.05); }
     .driver-number {
-      font-size: 1.5em;
-      font-style: italic;
-      font-weight: bold;
-      margin-right: 8px;
+      font-size:1.5em; font-style:italic;
+      font-weight:bold; margin-right:8px;
     }
     img.car {
-      height: 48px;
-      vertical-align: middle;
-      margin-right: 8px;
+      height:48px; vertical-align:middle;
+      margin-right:8px;
     }
     img.logo {
-      height: 48px;
-      margin-left: 12px;
+      position:absolute; right:10px;
+      top:50%; transform:translateY(-50%);
+      height:48px;
     }
     .team-cell {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
+      position:relative; text-align:center;
+      white-space:nowrap;
     }
-
-    /* Team row background-colours */
-    .team-ALPINE          { background-color: #0090FF; }
-    .team-ASTON\ MARTIN  { background-color: #004940; }
-    .team-FERRARI        { background-color: #DC0000; }
-    .team-HAAS           { background-color: #B6BABD; color:#000; }
-    .team-KICK\ SAUBER   { background-color: #000000; }
-    .team-MCLAREN        { background-color: #FF8700; }
-    .team-MERCEDES       { background-color: #00D2BE; }
+    /* Team Colours */
+    .team-ALPINE           { background:#0090FF; }
+    .team-ASTON\ MARTIN   { background:#004940; }
+    .team-FERRARI         { background:#DC0000; }
+    .team-HAAS            { background:#B6BABD; color:#000; }
+    .team-KICK\ SAUBER    { background:#000000; }
+    .team-MCLAREN         { background:#FF8700; }
+    .team-MERCEDES        { background:#00D2BE; }
     .team-RACING\ BULLS,
-    .team-RED\ BULL\ RACING { background-color: #1B1443; }
-    .team-WILLIAMS       { background-color: #005AFF; }
-    .team-RESERVE        { background-color: #FFFFFF; color: #000; }
+    .team-RED\ BULL\ RACING{ background:#1B1443; }
+    .team-WILLIAMS        { background:#005AFF; }
+    .team-RESERVE         { background:#FFFFFF; color:#000; }
   </style>
 </head>
 <body>
 
-  <div class="version">Version: Beta 0.0.39</div>
+  <div class="version">Version: Beta 0.0.40</div>
   <div class="header">
-    <img src="ifwl_logo.png" alt="IFWL Logo" />
+    <img src="ifwl_logo.png" alt="IFWL Logo"/>
     <h1>IFWL F1 Leaderboard</h1>
-    <img src="ifwl_logo.png" alt="IFWL Logo" />
+    <img src="ifwl_logo.png" alt="IFWL Logo"/>
   </div>
 
-  <a href="https://www.thesimgrid.com/championships/15239" class="btn" target="_blank">Join our latest series here</a>
+  <a href="https://www.thesimgrid.com/championships/15239"
+     class="btn" target="_blank">
+    Join our latest series here
+  </a>
 
   <h2>Driver Standings</h2>
   <table id="driver-table">
-    <thead><tr><th>Driver</th><th>Team</th><th>Total Points</th></tr></thead>
+    <thead>
+      <tr><th>Driver</th><th>Team</th><th>Total Points</th></tr>
+    </thead>
     <tbody></tbody>
   </table>
 
   <h2>Constructors Standings</h2>
   <table id="constructor-table">
-    <thead><tr><th>Team</th><th>Total Points</th></tr></thead>
+    <thead>
+      <tr><th>Team</th><th>Total Points</th></tr>
+    </thead>
     <tbody></tbody>
   </table>
 
@@ -112,94 +108,73 @@
     <tbody></tbody>
   </table>
 
-<script>
-  const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
-  const teamCars = {
-    "ALPINE":          "ALPINE.webp",
-    "ASTON MARTIN":    "ASTON.webp",
-    "FERRARI":         "FERRARI.webp",
-    "HAAS":            "HAAS.webp",
-    "MCLAREN":         "MCLAREN.webp",
-    "MERCEDES":        "MERCEDES.webp",
-    "RACING BULLS":    "RACINGBULLS.webp",
-    "RED BULL RACING": "RBR.webp",
-    "KICK SAUBER":     "SAUBER.webp",
-    "RESERVE":         "RESERVE.webp",
-    "WILLIAMS":        "WILLIAMS.webp"
-  };
-  const teamLogos = {
-    "ALPINE":          "ALPINELOGO.webp",
-    "ASTON MARTIN":    "ASTONLOGO.webp",
-    "FERRARI":         "FERARRILOGO.webp",
-    "HAAS":            "HAASLOGO.webp",
-    "MCLAREN":         "MCLARENLOGO.webp",
-    "MERCEDES":        "MERCEDESLOGO.webp",
-    "RACING BULLS":    "RBLOGO.webp",
-    "RED BULL RACING": "RBRLOGO.webp",
-    "KICK SAUBER":     "KICKLOGO.webp",
-    "RESERVE":         "RESERVELOGO.webp",
-    "WILLIAMS":        "WILLIAMSLOGO.webp"
-  };
-
-  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
-    .then(r=>r.text())
-    .then(t=>JSON.parse(t.substr(47).slice(0,-2)))
-    .then(json=>{
-      const rows = json.table.rows.map(r=>r.c.map(c=>c?.v||""));
-      const driverBody = document.querySelector("#driver-table tbody");
-      const constructorBody = document.querySelector("#constructor-table tbody");
-      const unassignedBody = document.querySelector("#unassigned-table tbody");
-      const constructors = {};
-
-      rows.forEach(r=>{
-        let [rawDriver, team,,,,,,,,,,,,,,,,,, points] = r;
-        if(!rawDriver) return;
-        // parse [NNN] - name
-        let num = "", name = rawDriver;
-        const m = rawDriver.match(/^\s*\[(\d+)\]\s*-\s*(.+)$/);
-        if(m){ num = m[1]; name = m[2]; }
-        if(!team){
-          const tr = document.createElement("tr");
-          tr.innerHTML = `<td>${name}</td>`;
-          return unassignedBody.appendChild(tr);
-        }
-        const key = team.toUpperCase().trim();
-        // accumulate constructors
-        constructors[key] = (constructors[key]||0) + (parseInt(points)||0);
-
-        // build driver row
-        const tr = document.createElement("tr");
-        tr.className = `driver-row team-${key.replace(/ /g,"\\ ")}`;
-        tr.innerHTML = `
-          <td>${name}</td>
-          <td class="team-cell">
-            ${ num ? `<span class="driver-number">${num}</span>` : "" }
-            <img src="${teamCars[key]}" class="car"   alt="${team}"/>
-            ${team}
-            <img src="${teamLogos[key]}" class="logo" alt="${team}"/>
-          </td>
-          <td>${parseInt(points)||0}</td>`;
-        driverBody.appendChild(tr);
-      });
-
-      // constructors table
-      Object.entries(constructors)
-        .sort((a,b)=>b[1]-a[1])
-        .forEach(([team,pts])=>{
-          const tr = document.createElement("tr");
-          const key = team.toUpperCase();
-          tr.className = `driver-row team-${key.replace(/ /g,"\\ ")}`;
-          tr.innerHTML = `
+  <script>
+    const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
+    const teamCars = {
+      "ALPINE":"ALPINE.webp","ASTON MARTIN":"ASTON.webp","FERRARI":"FERRARI.webp",
+      "HAAS":"HAAS.webp","MCLAREN":"MCLAREN.webp","MERCEDES":"MERCEDES.webp",
+      "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
+      "KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp","WILLIAMS":"WILLIAMS.webp"
+    };
+    const teamLogos = {
+      "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERARRILOGO.webp",
+      "HAAS":"HAASLOGO.webp","MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
+      "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
+      "KICK SAUBER":"KICKLOGO.webp","RESERVE":"RESERVELOGO.webp","WILLIAMS":"WILLIAMSLOGO.webp"
+    };
+    fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
+      .then(r=>r.text())
+      .then(t=>JSON.parse(t.substr(47).slice(0,-2)))
+      .then(js=>{
+        const rows=js.table.rows.map(r=>r.c.map(c=>c?.v||""));
+        const dBody=document.querySelector("#driver-table tbody");
+        const cBody=document.querySelector("#constructor-table tbody");
+        const uBody=document.querySelector("#unassigned-table tbody");
+        const cons={};
+        rows.forEach(r=>{
+          const raw=r[0]||"";
+          const team=r[1]||"";
+          const pts=parseInt(r[18])||0;
+          if(!raw) return;
+          // bracketed number stays in raw
+          if(!team){
+            const tr=document.createElement("tr");
+            tr.innerHTML=`<td>${raw}</td>`;
+            return uBody.appendChild(tr);
+          }
+          const key=team.toUpperCase().trim();
+          cons[key]=(cons[key]||0)+pts;
+          const tr=document.createElement("tr");
+          tr.className=`driver-row team-${key.replace(/ /g,"\\ ")}`;
+          tr.innerHTML=`
+            <td>${raw}</td>
             <td class="team-cell">
-              <img src="${teamCars[key]}" class="car" alt="${team}"/>
+              <span class="driver-number">${(raw.match(/^\s*\[(\d+)\]/)||[])[1]||""}</span>
+              <img src="${teamCars[key]}" class="car" alt=""/>
               ${team}
-              <img src="${teamLogos[key]}" class="logo" alt="${team}"/>
+              <img src="${teamLogos[key]}" class="logo" alt=""/>
             </td>
             <td>${pts}</td>`;
-          constructorBody.appendChild(tr);
+          dBody.appendChild(tr);
         });
-    })
-    .catch(console.error);
-</script>
+        Object.entries(cons)
+          .sort((a,b)=>b[1]-a[1])
+          .forEach(([team,pts])=>{
+            const key=team;
+            const tr=document.createElement("tr");
+            tr.className=`driver-row team-${key.replace(/ /g,"\\ ")}`;
+            tr.innerHTML=`
+              <td></td>
+              <td class="team-cell">
+                <img src="${teamCars[key]}" class="car" alt=""/>
+                ${team}
+                <img src="${teamLogos[key]}" class="logo" alt=""/>
+              </td>
+              <td>${pts}</td>`;
+            cBody.appendChild(tr);
+          });
+      })
+      .catch(console.error);
+  </script>
 </body>
 </html>
