--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -2,94 +2,147 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IFWL F1 Leaderboard</title>
   <style>
+    /* ──────── GLOBAL ──────── */
     body {
-      font-family: Arial,sans-serif;
-      background: url('ifwl_bg.webp') center/cover no-repeat fixed;
-      margin:0; padding:20px;
+      font-family: Arial, sans-serif;
+      background: url('ifwl_bg.webp') no-repeat center center fixed;
+      background-size: cover;
+      margin: 0;
+      padding: 20px;
     }
-    h1,h2 { text-align:center; color:#000; }
+    h1, h2 {
+      text-align: center;
+      color: #000;
+      margin: 8px 0;
+    }
     .version {
-      position:fixed; top:10px; left:10px;
-      font-size:0.8em; color:#ccc;
+      position: fixed;
+      top: 10px;
+      left: 10px;
+      font-size: 0.8em;
+      color: #777;
     }
     .header {
-      display:flex; align-items:center; justify-content:center;
-      gap:20px; margin-bottom:10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
     }
-    .header img { height:48px; }
-    .btn {
-      display:inline-block; margin:0 auto 20px;
-      padding:8px 16px; background:#222; color:#fff;
-      text-decoration:none; border-radius:4px;
-      font-weight:bold;
+    .header img {
+      height: 48px;
     }
+    button.join-btn {
+      display: block;
+      margin: 8px auto 16px;
+      padding: 8px 16px;
+      background: #1a1a3d;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 0.9em;
+    }
+    button.join-btn:hover {
+      background: #121237;
+    }
+
+    /* ──────── TABLE ──────── */
     table {
-      width:100%; border-collapse:collapse;
-      background:rgba(0,0,0,0.75);
-      margin:20px 0; border-radius:8px; overflow:hidden;
-      color:#fff;
+      width: 100%;
+      border-collapse: collapse;
+      background: rgba(0,0,0,0.75);
+      margin: 20px 0;
+      border-radius: 8px;
+      overflow: hidden;
+      color: white;
     }
-    th,td {
-      padding:10px; border-bottom:1px solid #333;
-      vertical-align:middle;
+    th, td {
+      padding: 12px 8px;
+      text-align: center;
+      border-bottom: 1px solid #333;
     }
     th {
-      background:#333; text-transform:uppercase;
-      font-weight:bold; text-align:center;
+      background: #333;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: #fff;
     }
-    tr:hover { background:rgba(255,255,255,0.05); }
+    tr:hover {
+      background: rgba(255,255,255,0.05);
+    }
+
+    /* ──────── DRIVER CELL ──────── */
+    .driver-cell {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
     .driver-number {
-      font-size:1.5em; font-style:italic;
-      font-weight:bold; margin-right:8px;
+      font-size: 1.5em;
+      font-weight: bold;
+      font-style: italic;
+      margin-right: 12px;
+      color: #fff;
+    }
+
+    /* ──────── TEAM CELL ──────── */
+    .team-cell {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     img.car {
-      height:48px; vertical-align:middle;
-      margin-right:8px;
+      height: 48px;
+      margin-right: 8px;
+    }
+
+    /* ──────── POINTS CELL ──────── */
+    .points-cell {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     img.logo {
-      position:absolute; right:10px;
-      top:50%; transform:translateY(-50%);
-      height:48px;
+      height: 40px;
+      margin-right: 8px;
     }
-    .team-cell {
-      position:relative; text-align:center;
-      white-space:nowrap;
-    }
-    /* Team Colours */
-    .team-ALPINE           { background:#0090FF; }
-    .team-ASTON\ MARTIN   { background:#004940; }
-    .team-FERRARI         { background:#DC0000; }
-    .team-HAAS            { background:#B6BABD; color:#000; }
-    .team-KICK\ SAUBER    { background:#000000; }
-    .team-MCLAREN         { background:#FF8700; }
-    .team-MERCEDES        { background:#00D2BE; }
-    .team-RACING\ BULLS,
-    .team-RED\ BULL\ RACING{ background:#1B1443; }
-    .team-WILLIAMS        { background:#005AFF; }
-    .team-RESERVE         { background:#FFFFFF; color:#000; }
+
+    /* ──────── TEAM ROW COLORS ──────── */
+    .team-MERCEDES      { background-color: #00D2BE; }
+    .team-MCLAREN       { background-color: #FF8700; }
+    .team-FERRARI       { background-color: #DC0000; }
+    .team-HAAS          { background-color: #B6BABD; }
+    .team-WILLIAMS      { background-color: #005AFF; }
+    .team-RED\ BULL\ RACING,
+    .team-RACING\ BULLS { background-color: #1B1443; }
+    .team-ASTON\ MARTIN { background-color: #004940; }
+    .team-KICK\ SAUBER  { background-color: #000000; }
+    .team-RESERVE       { background-color: #FFFFFF; color:black; }
   </style>
 </head>
+
 <body>
-
-  <div class="version">Version: Beta 0.0.40</div>
+  <div class="version">Version: Beta 0.0.38</div>
   <div class="header">
-    <img src="ifwl_logo.png" alt="IFWL Logo"/>
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
     <h1>IFWL F1 Leaderboard</h1>
-    <img src="ifwl_logo.png" alt="IFWL Logo"/>
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
   </div>
-
-  <a href="https://www.thesimgrid.com/championships/15239"
-     class="btn" target="_blank">
+  <button class="join-btn" onclick="window.open('https://www.thesimgrid.com/championships/15239','_blank')">
     Join our latest series here
-  </a>
+  </button>
 
   <h2>Driver Standings</h2>
   <table id="driver-table">
     <thead>
-      <tr><th>Driver</th><th>Team</th><th>Total Points</th></tr>
+      <tr>
+        <th>Driver</th>
+        <th>Team</th>
+        <th>Total Points</th>
+      </tr>
     </thead>
     <tbody></tbody>
   </table>
@@ -97,82 +150,115 @@
   <h2>Constructors Standings</h2>
   <table id="constructor-table">
     <thead>
-      <tr><th>Team</th><th>Total Points</th></tr>
+      <tr>
+        <th>Team</th>
+        <th>Total Points</th>
+      </tr>
     </thead>
     <tbody></tbody>
   </table>
 
   <h2>Unassigned Drivers</h2>
   <table id="unassigned-table">
-    <thead><tr><th>Driver</th></tr></thead>
+    <thead>
+      <tr><th>Driver</th></tr>
+    </thead>
     <tbody></tbody>
   </table>
 
   <script>
     const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
     const teamCars = {
-      "ALPINE":"ALPINE.webp","ASTON MARTIN":"ASTON.webp","FERRARI":"FERRARI.webp",
-      "HAAS":"HAAS.webp","MCLAREN":"MCLAREN.webp","MERCEDES":"MERCEDES.webp",
-      "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
-      "KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp","WILLIAMS":"WILLIAMS.webp"
+      "ALPINE": "ALPINE.webp",
+      "ASTON MARTIN": "ASTON.webp",
+      "FERRARI": "FERRARI.webp",
+      "HAAS": "HAAS.webp",
+      "MCLAREN": "MCLAREN.webp",
+      "MERCEDES": "MERCEDES.webp",
+      "RACING BULLS": "RACINGBULLS.webp",
+      "RED BULL RACING": "RBR.webp",
+      "KICK SAUBER": "SAUBER.webp",
+      "RESERVE": "RESERVE.webp",
+      "WILLIAMS": "WILLIAMS.webp"
     };
     const teamLogos = {
-      "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERARRILOGO.webp",
-      "HAAS":"HAASLOGO.webp","MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
-      "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
-      "KICK SAUBER":"KICKLOGO.webp","RESERVE":"RESERVELOGO.webp","WILLIAMS":"WILLIAMSLOGO.webp"
+      "ALPINE": "ALPINELOGO.webp",
+      "ASTON MARTIN": "ASTONLOGO.webp",
+      "FERRARI": "FERARRILOGO.webp",
+      "HAAS": "HAASLOGO.webp",
+      "MCLAREN": "MCLARENLOGO.webp",
+      "MERCEDES": "MERCEDESLOGO.webp",
+      "RACING BULLS": "RBLOGO.webp",
+      "RED BULL RACING": "RBRLOGO.webp",
+      "KICK SAUBER": "KICKLOGO.webp",
+      "RESERVE": "RESERVELOGO.webp",
+      "WILLIAMS": "WILLIAMSLOGO.webp"
     };
+
     fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
-      .then(r=>r.text())
-      .then(t=>JSON.parse(t.substr(47).slice(0,-2)))
-      .then(js=>{
-        const rows=js.table.rows.map(r=>r.c.map(c=>c?.v||""));
-        const dBody=document.querySelector("#driver-table tbody");
-        const cBody=document.querySelector("#constructor-table tbody");
-        const uBody=document.querySelector("#unassigned-table tbody");
-        const cons={};
-        rows.forEach(r=>{
-          const raw=r[0]||"";
-          const team=r[1]||"";
-          const pts=parseInt(r[18])||0;
-          if(!raw) return;
-          // bracketed number stays in raw
-          if(!team){
-            const tr=document.createElement("tr");
-            tr.innerHTML=`<td>${raw}</td>`;
-            return uBody.appendChild(tr);
+      .then(r => r.text())
+      .then(txt => JSON.parse(txt.substr(47).slice(0,-2)))
+      .then(json => {
+        const rows = json.table.rows.map(r => r.c.map(c=>c?.v||""));
+        const driverBody = document.querySelector("#driver-table tbody");
+        const constructorBody = document.querySelector("#constructor-table tbody");
+        const unassignedBody = document.querySelector("#unassigned-table tbody");
+        const constructorMap = {};
+
+        rows.forEach(cells => {
+          const rawDriver = cells[0].trim();
+          const rawTeam   = cells[1].trim();
+          const pts       = parseInt(cells[18])||0;
+
+          // extract [NN]-badge if present
+          let number="", name=rawDriver;
+          const m = rawDriver.match(/^\[\s*(\d+)\s*\]\s*-\s*(.*)$/);
+          if(m){ number=m[1]; name=m[2]; }
+
+          if(!rawTeam){
+            // unassigned
+            const tr = document.createElement("tr");
+            tr.innerHTML = `<td class="driver-cell">${name}</td>`;
+            unassignedBody.appendChild(tr);
+            return;
           }
-          const key=team.toUpperCase().trim();
-          cons[key]=(cons[key]||0)+pts;
-          const tr=document.createElement("tr");
-          tr.className=`driver-row team-${key.replace(/ /g,"\\ ")}`;
-          tr.innerHTML=`
-            <td>${raw}</td>
-            <td class="team-cell">
-              <span class="driver-number">${(raw.match(/^\s*\[(\d+)\]/)||[])[1]||""}</span>
-              <img src="${teamCars[key]}" class="car" alt=""/>
-              ${team}
-              <img src="${teamLogos[key]}" class="logo" alt=""/>
+          const keyTeam = rawTeam.toUpperCase();
+          constructorMap[keyTeam] = (constructorMap[keyTeam]||0) + pts;
+
+          // DRIVER row
+          const tr = document.createElement("tr");
+          tr.className = `driver-row team-${keyTeam.replace(/ /g,"\\ ")}`;
+          tr.innerHTML = `
+            <td class="driver-cell">
+              ${number? `<span class="driver-number">${number}</span>`: ""}
+              ${name}
             </td>
-            <td>${pts}</td>`;
-          dBody.appendChild(tr);
+            <td class="team-cell">
+              <img src="${teamCars[keyTeam]}" class="car" alt="${rawTeam}"/>
+              <span>${rawTeam}</span>
+            </td>
+            <td class="points-cell">
+              <img src="${teamLogos[keyTeam]}" class="logo" alt="${rawTeam}"/>
+              ${pts}
+            </td>`;
+          driverBody.appendChild(tr);
         });
-        Object.entries(cons)
-          .sort((a,b)=>b[1]-a[1])
-          .forEach(([team,pts])=>{
-            const key=team;
-            const tr=document.createElement("tr");
-            tr.className=`driver-row team-${key.replace(/ /g,"\\ ")}`;
-            tr.innerHTML=`
-              <td></td>
-              <td class="team-cell">
-                <img src="${teamCars[key]}" class="car" alt=""/>
-                ${team}
-                <img src="${teamLogos[key]}" class="logo" alt=""/>
-              </td>
-              <td>${pts}</td>`;
-            cBody.appendChild(tr);
-          });
+
+        // Constructors
+        Object.entries(constructorMap).forEach(([team, total])=>{
+          const tr = document.createElement("tr");
+          tr.className = `driver-row team-${team.replace(/ /g,"\\ ")}`;
+          tr.innerHTML = `
+            <td class="team-cell">
+              <img src="${teamCars[team]}" class="car" alt="${team}"/>
+              <span>${team}</span>
+            </td>
+            <td class="points-cell">
+              <img src="${teamLogos[team]}" class="logo" alt="${team}"/>
+              ${total}
+            </td>`;
+          constructorBody.appendChild(tr);
+        });
       })
       .catch(console.error);
   </script>
