--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -2,147 +2,98 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>IFWL F1 Leaderboard</title>
   <style>
-    /* ──────── GLOBAL ──────── */
     body {
-      font-family: Arial, sans-serif;
-      background: url('ifwl_bg.webp') no-repeat center center fixed;
-      background-size: cover;
-      margin: 0;
-      padding: 20px;
+      margin:0; padding:20px;
+      font-family:Arial,sans-serif;
+      background:url('ifwl_bg.webp')no-repeat center center fixed;
+      background-size:cover;
     }
-    h1, h2 {
-      text-align: center;
-      color: #000;
-      margin: 8px 0;
-    }
+    h1,h2 { text-align:center; color:#000; margin:8px 0; }
     .version {
-      position: fixed;
-      top: 10px;
-      left: 10px;
-      font-size: 0.8em;
-      color: #777;
+      position:fixed; top:10px; left:10px;
+      background:rgba(255,255,255,0.7); padding:2px 6px;
+      font-size:0.8em; border-radius:4px;
     }
     .header {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
+      display:flex; align-items:center; justify-content:center;
+      gap:20px; margin-bottom:10px;
     }
-    .header img {
-      height: 48px;
+    .header img { height:48px; }
+    .join-series { text-align:center; margin:12px 0; }
+    .join-series a {
+      background:#1B1443; color:#fff; text-decoration:none;
+      padding:10px 20px; border-radius:4px; font-weight:bold;
     }
-    button.join-btn {
-      display: block;
-      margin: 8px auto 16px;
-      padding: 8px 16px;
-      background: #1a1a3d;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 0.9em;
-    }
-    button.join-btn:hover {
-      background: #121237;
-    }
-
-    /* ──────── TABLE ──────── */
     table {
-      width: 100%;
-      border-collapse: collapse;
-      background: rgba(0,0,0,0.75);
-      margin: 20px 0;
-      border-radius: 8px;
-      overflow: hidden;
-      color: white;
+      width:100%; border-collapse:collapse;
+      background:rgba(0,0,0,0.75); margin:20px 0;
+      border-radius:8px; overflow:hidden; color:#fff;
     }
     th, td {
-      padding: 12px 8px;
-      text-align: center;
-      border-bottom: 1px solid #333;
+      padding:10px; text-align:center;
+      border-bottom:1px solid #333;
     }
     th {
-      background: #333;
-      text-transform: uppercase;
-      font-weight: bold;
-      color: #fff;
+      background:#333; text-transform:uppercase; font-weight:bold;
     }
-    tr:hover {
-      background: rgba(255,255,255,0.05);
-    }
+    tr:hover { background:rgba(255,255,255,0.1); }
 
-    /* ──────── DRIVER CELL ──────── */
-    .driver-cell {
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-    }
-    .driver-number {
-      font-size: 1.5em;
-      font-weight: bold;
-      font-style: italic;
-      margin-right: 12px;
-      color: #fff;
-    }
-
-    /* ──────── TEAM CELL ──────── */
-    .team-cell {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+    /* car & logo images */
     img.car {
-      height: 48px;
-      margin-right: 8px;
-    }
-
-    /* ──────── POINTS CELL ──────── */
-    .points-cell {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      height:48px; vertical-align:middle; margin:0 8px 0 0;
     }
     img.logo {
-      height: 40px;
-      margin-right: 8px;
+      height:40px; float:right; margin-left:10px;
+      opacity:1!important; filter:none!important;
     }
 
-    /* ──────── TEAM ROW COLORS ──────── */
-    .team-MERCEDES      { background-color: #00D2BE; }
-    .team-MCLAREN       { background-color: #FF8700; }
-    .team-FERRARI       { background-color: #DC0000; }
-    .team-HAAS          { background-color: #B6BABD; }
-    .team-WILLIAMS      { background-color: #005AFF; }
-    .team-RED\ BULL\ RACING,
-    .team-RACING\ BULLS { background-color: #1B1443; }
-    .team-ASTON\ MARTIN { background-color: #004940; }
-    .team-KICK\ SAUBER  { background-color: #000000; }
-    .team-RESERVE       { background-color: #FFFFFF; color:black; }
+    /* driver number badge */
+    .driver-number {
+      display:inline-block;
+      font-size:2em; font-weight:bold; font-style:italic;
+      line-height:1; color:#fff;
+      background:rgba(0,0,0,0.6);
+      padding:4px 8px; margin-right:8px;
+      vertical-align:middle; border-radius:4px;
+    }
+
+    /* Team Colours */
+    .team-ALPINE         { background-color:#0090FF; }
+    .team-ASTON-MARTIN  { background-color:#004940; }
+    .team-KICK-SAUBER   { background-color:#000000; }
+    .team-RED-BULL-RACING,
+    .team-RACING-BULLS  { background-color:#1B1443; }
+    .team-MERCEDES      { background-color:#00D2BE; }
+    .team-MCLAREN       { background-color:#FF8700; }
+    .team-FERRARI       { background-color:#DC0000; }
+    .team-HAAS          { background-color:#B6BABD; }
+    .team-WILLIAMS      { background-color:#005AFF; }
+    .team-RESERVE       { background-color:#FFFFFF; color:#000; }
   </style>
 </head>
-
 <body>
-  <div class="version">Version: Beta 0.0.38</div>
+
+  <div class="version">Version: Beta 0.0.39 (Number Badge Moved)</div>
+
   <div class="header">
-    <img src="ifwl_logo.png" alt="IFWL Logo" />
+    <img src="ifwl_logo.png" alt="IFWL Logo"/>
     <h1>IFWL F1 Leaderboard</h1>
-    <img src="ifwl_logo.png" alt="IFWL Logo" />
+    <img src="ifwl_logo.png" alt="IFWL Logo"/>
   </div>
-  <button class="join-btn" onclick="window.open('https://www.thesimgrid.com/championships/15239','_blank')">
-    Join our latest series here
-  </button>
+
+  <div class="join-series">
+    <a href="https://www.thesimgrid.com/championships/15239" target="_blank">
+      Join our latest series here
+    </a>
+  </div>
 
   <h2>Driver Standings</h2>
   <table id="driver-table">
     <thead>
-      <tr>
-        <th>Driver</th>
-        <th>Team</th>
-        <th>Total Points</th>
-      </tr>
+      <tr><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr>
     </thead>
     <tbody></tbody>
   </table>
@@ -150,117 +101,95 @@
   <h2>Constructors Standings</h2>
   <table id="constructor-table">
     <thead>
-      <tr>
-        <th>Team</th>
-        <th>Total Points</th>
-      </tr>
+      <tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
     </thead>
     <tbody></tbody>
   </table>
 
   <h2>Unassigned Drivers</h2>
   <table id="unassigned-table">
-    <thead>
-      <tr><th>Driver</th></tr>
-    </thead>
+    <thead><tr><th>DRIVER</th></tr></thead>
     <tbody></tbody>
   </table>
 
   <script>
     const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
     const teamCars = {
-      "ALPINE": "ALPINE.webp",
-      "ASTON MARTIN": "ASTON.webp",
-      "FERRARI": "FERRARI.webp",
-      "HAAS": "HAAS.webp",
-      "MCLAREN": "MCLAREN.webp",
-      "MERCEDES": "MERCEDES.webp",
-      "RACING BULLS": "RACINGBULLS.webp",
-      "RED BULL RACING": "RBR.webp",
-      "KICK SAUBER": "SAUBER.webp",
-      "RESERVE": "RESERVE.webp",
-      "WILLIAMS": "WILLIAMS.webp"
+      ALPINE:"ALPINE.webp","ASTON MARTIN":"ASTON.webp",FERRARI:"FERRARI.webp",
+      HAAS:"HAAS.webp",MCLAREN:"MCLAREN.webp",MERCEDES:"MERCEDES.webp",
+      "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
+      "KICK SAUBER":"SAUBER.webp",RESERVE:"RESERVE.webp",WILLIAMS:"WILLIAMS.webp"
     };
     const teamLogos = {
-      "ALPINE": "ALPINELOGO.webp",
-      "ASTON MARTIN": "ASTONLOGO.webp",
-      "FERRARI": "FERARRILOGO.webp",
-      "HAAS": "HAASLOGO.webp",
-      "MCLAREN": "MCLARENLOGO.webp",
-      "MERCEDES": "MERCEDESLOGO.webp",
-      "RACING BULLS": "RBLOGO.webp",
-      "RED BULL RACING": "RBRLOGO.webp",
-      "KICK SAUBER": "KICKLOGO.webp",
-      "RESERVE": "RESERVELOGO.webp",
-      "WILLIAMS": "WILLIAMSLOGO.webp"
+      ALPINE:"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp",FERRARI:"FERARRILOGO.webp",
+      HAAS:"HAASLOGO.webp",MCLAREN:"MCLARENLOGO.webp",MERCEDES:"MERCEDESLOGO.webp",
+      "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
+      "KICK SAUBER":"KICKLOGO.webp",RESERVE:"RESERVELOGO.webp",WILLIAMS:"WILLIAMSLOGO.webp"
     };
+    const safeClass = t=>"team-"+t.replace(/\s+/g,"-");
 
     fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
-      .then(r => r.text())
-      .then(txt => JSON.parse(txt.substr(47).slice(0,-2)))
-      .then(json => {
-        const rows = json.table.rows.map(r => r.c.map(c=>c?.v||""));
-        const driverBody = document.querySelector("#driver-table tbody");
-        const constructorBody = document.querySelector("#constructor-table tbody");
-        const unassignedBody = document.querySelector("#unassigned-table tbody");
-        const constructorMap = {};
+      .then(r=>r.text())
+      .then(t=>JSON.parse(t.substr(47).slice(0,-2)))
+      .then(j=>{
+        const rows = j.table.rows.map(r=>r.c.map(c=>c?.v||""));
+        const dBody = document.querySelector("#driver-table tbody");
+        const cBody = document.querySelector("#constructor-table tbody");
+        const uBody = document.querySelector("#unassigned-table tbody");
+        dBody.innerHTML=cBody.innerHTML=uBody.innerHTML="";
+        const totals = {};
 
-        rows.forEach(cells => {
-          const rawDriver = cells[0].trim();
-          const rawTeam   = cells[1].trim();
-          const pts       = parseInt(cells[18])||0;
-
-          // extract [NN]-badge if present
-          let number="", name=rawDriver;
-          const m = rawDriver.match(/^\[\s*(\d+)\s*\]\s*-\s*(.*)$/);
-          if(m){ number=m[1]; name=m[2]; }
-
-          if(!rawTeam){
-            // unassigned
-            const tr = document.createElement("tr");
-            tr.innerHTML = `<td class="driver-cell">${name}</td>`;
-            unassignedBody.appendChild(tr);
+        rows.forEach(r=>{
+          const raw  = (r[0]||"")+"";
+          if(!raw) return;
+          const pts  = parseInt(r[18])||0;
+          const team = (r[1]||"")+"";
+          // parse [NNN]
+          const m    = raw.match(/\[\s*(\d+)\s*\]/);
+          const num  = m? m[1] : "";
+          const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/,"");
+          if(!team.trim()){
+            uBody.innerHTML+=`<tr><td>${name}</td></tr>`;
             return;
           }
-          const keyTeam = rawTeam.toUpperCase();
-          constructorMap[keyTeam] = (constructorMap[keyTeam]||0) + pts;
+          totals[team] = (totals[team]||0)+pts;
+          const U    = team.toUpperCase();
+          const cls  = safeClass(U);
+          const car  = teamCars[U]   || "";
+          const logo = teamLogos[U]  || "";
 
-          // DRIVER row
-          const tr = document.createElement("tr");
-          tr.className = `driver-row team-${keyTeam.replace(/ /g,"\\ ")}`;
-          tr.innerHTML = `
-            <td class="driver-cell">
-              ${number? `<span class="driver-number">${number}</span>`: ""}
-              ${name}
+          const tr   = document.createElement("tr");
+          tr.className = cls;
+          tr.innerHTML=`
+            <td>${name}</td>
+            <td>
+              ${num?`<span class="driver-number">${num}</span>`:""}
+              <img src="${car}" class="car" alt="${team}"/>
+              ${team}
+              <img src="${logo}" class="logo" alt="${team}"/>
             </td>
-            <td class="team-cell">
-              <img src="${teamCars[keyTeam]}" class="car" alt="${rawTeam}"/>
-              <span>${rawTeam}</span>
-            </td>
-            <td class="points-cell">
-              <img src="${teamLogos[keyTeam]}" class="logo" alt="${rawTeam}"/>
-              ${pts}
-            </td>`;
-          driverBody.appendChild(tr);
+            <td>${pts}</td>`;
+          dBody.appendChild(tr);
         });
 
-        // Constructors
-        Object.entries(constructorMap).forEach(([team, total])=>{
-          const tr = document.createElement("tr");
-          tr.className = `driver-row team-${team.replace(/ /g,"\\ ")}`;
-          tr.innerHTML = `
-            <td class="team-cell">
-              <img src="${teamCars[team]}" class="car" alt="${team}"/>
-              <span>${team}</span>
+        Object.entries(totals).forEach(([team,pts])=>{
+          const U    = team.toUpperCase();
+          const cls  = safeClass(U);
+          const car  = teamCars[U]   || "";
+          const logo = teamLogos[U]  || "";
+          const tr   = document.createElement("tr");
+          tr.className = cls;
+          tr.innerHTML=`
+            <td>
+              <img src="${car}" class="car" alt="${team}"/>
+              ${team}
+              <img src="${logo}" class="logo" alt="${team}"/>
             </td>
-            <td class="points-cell">
-              <img src="${teamLogos[team]}" class="logo" alt="${team}"/>
-              ${total}
-            </td>`;
-          constructorBody.appendChild(tr);
+            <td>${pts}</td>`;
+          cBody.appendChild(tr);
         });
-      })
-      .catch(console.error);
+      });
   </script>
+
 </body>
 </html>
