--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -50,15 +50,20 @@
       opacity:1!important; filter:none!important;
     }
 
-    /* driver number badge */
-    .driver-number {
-      display:inline-block;
-      font-size:2em; font-weight:bold; font-style:italic;
-      line-height:1; color:#fff;
-      background:rgba(0,0,0,0.6);
-      padding:4px 8px; margin-right:8px;
-      vertical-align:middle; border-radius:4px;
-    }
+    /* driver number — no box, big bold italic black */
+.driver-number {
+  display: inline-block;
+  font-size: 2.5em;           /* bump up as large as you like */
+  font-weight: bold;
+  font-style: italic;
+  line-height: 1;
+  color: #000;                /* pure black text */
+  background: none;           /* remove the grey box */
+  padding: 0;                 /* no extra space */
+  margin-right: 8px;          /* keep a little gap to the car */
+  vertical-align: middle;
+  border-radius: 0;           /* no rounding */
+}
 
     /* Team Colours */
     .team-ALPINE         { background-color:#0090FF; }
