--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -88,7 +88,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.43 (Sorting + Arrow Fix)</div>
+<div class="version">Version: Beta 0.0.44 (Live Arrow Debug)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -204,20 +204,19 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
         const name = entry.name;
         const team = driverTeamMap[name];
         const pts = entry.pts;
-        const m = name.match(/\[\s*(\d+)\s*\]/);
-        const num = m ? m[1] : "";
         const teamUpper = (team || "").toUpperCase();
         const diff = (prevRanks[name] || 0) - (currRanks[name] || 0);
         let arrow = "";
         if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
         else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
 
+        console.log("Driver:", name, "| Prev Rank:", prevRanks[name], "| Curr Rank:", currRanks[name], "| Diff:", diff);
+
         const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
           <td>${name}</td>
           <td>
-            ${num ? `<span class="driver-number">${num}</span>` : ""}
             <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
             ${team}
             <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
@@ -237,6 +236,8 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
         let arrow = "";
         if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
         else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
+
+        console.log("Constructor:", team, "| Prev Rank:", prevCRank[team], "| Curr Rank:", currCRank[team], "| Diff:", diff);
 
         const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
