--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -88,7 +88,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.44 (Live Arrow Debug)</div>
+<div class="version">Version: Beta 0.0.45 (Live Sheet Fetch Fix)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -118,7 +118,6 @@
 <thead><tr><th>DRIVER</th></tr></thead>
 <tbody></tbody>
 </table>
-
 <script>
 const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
 const teamCars = {
@@ -149,7 +148,7 @@ const teamLogos = {
 };
 const safeClass = t => "driver-row team-" + t.replace(/\s+/g,"-");
 
-fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
+fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
   .then(r => r.text())
   .then(t => JSON.parse(t.substr(47).slice(0,-2)))
   .then(j => {
@@ -252,6 +251,5 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
       });
   });
 </script>
-
 </body>
 </html>
