--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -74,21 +74,21 @@
     .team-RACING-BULLS  { background-color:#1B1443; }
     .team-MERCEDES      { background-color:#00D2BE; }
     .team-MCLAREN       { background-color:#FF8700; }
-    .team-FERRARI       { background-color:#DC0000; }
+    .team-FERRARI       { background-color:#790004; }
     .team-HAAS          { background-color:#B6BABD; }
     .team-WILLIAMS      { background-color:#005AFF; }
     .team-RESERVE       { background-color:#FFFFFF; color:#000; }
   
 .arrow-icon {
-  height: 16px;
-  width: 16px;
+  height: 64px;
+  width: 64px;
   margin-left: 6px;
   vertical-align: middle;
 }
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.46 (Now using column S for total points)</div>
+<div class="version">Version: Beta 0.0.47 (Arrow Size + Ferrari Red Fix)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
