--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -100,7 +100,7 @@ const teamCars = {
   "RED BULL RACING":"RBR.webp","KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp","WILLIAMS":"WILLIAMS.webp"
 };
 const teamLogos = {
-  "ALPINE":"ALPINELoGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERARRILOGO.webp",
+  "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERARRILOGO.webp",
   "HAAS":"HAASLOGO.webp","MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
   "RACING BULLS":"RBLOGO.webp","RED BULL RACING":"RBRLOGO.webp","KICK SAUBER":"KICKLOGO.webp",
   "RESERVE":"RESERVELOGO.webp","WILLIAMS":"WILLIAMSLOGO.webp"
