--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -128,7 +128,8 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
   rows.forEach(r => {
     const raw = (r[0] || "") + "";
-    const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
+    const cleanName = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim().toUpperCase();
+    const name = cleanName;
     const team = (r[1] || "").trim();
     const currPts = parseInt(r[18]) || 0;
     const prevPts = getPrevTotal(r);
@@ -153,6 +154,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
   }
 
   const currRanks = rankMap([...currDriverTotals]);
+       const prevRanks = rankMap([...prevDriverTotals]);
   const prevRanks = rankMap([...prevDriverTotals]);
 
   currDriverTotals.sort((a, b) => b.pts - a.pts).forEach(entry => {
@@ -160,7 +162,9 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     const team = driverMap[name].team;
     const pts = entry.pts;
     const teamUpper = (team || "").toUpperCase();
-    const diff = (prevRanks[name] || 0) - (currRanks[name] || 0);
+    const prevRank = prevRanks[name] || 0;
+       const currRank = currRanks[name] || 0;
+       const diff = prevRank - currRank;
     let arrow = "";
     if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
     else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
