--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -77,7 +77,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.51 (Deduplication Fix)</div>
+<div class="version">Version: Beta 0.0.52 (Display Name Fix + Arrows Working)</div>
 <div class="header">
   <img alt="IFWL Logo" src="ifwl_logo.png"/>
   <h1>IFWL F1 Leaderboard</h1>
@@ -128,8 +128,9 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
   rows.forEach(r => {
     const raw = (r[0] || "") + "";
-    const cleanName = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim().toUpperCase();
-    const name = cleanName;
+    const displayName = raw.trim();
+    const compareName = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim().toUpperCase();
+    const name = compareName;
     const team = (r[1] || "").trim();
     const currPts = parseInt(r[18]) || 0;
     const prevPts = getPrevTotal(r);
@@ -171,7 +172,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     const tr = document.createElement("tr");
     tr.className = safeClass(teamUpper);
     tr.innerHTML = `
-      <td>${name}</td>
+      <td>${displayName}</td>
       <td>
         <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
         ${team}
