--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -169,6 +169,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
     else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
 
+    const displayName = driverMap[name].displayName || name;
     const tr = document.createElement("tr");
     tr.className = safeClass(teamUpper);
     tr.innerHTML = `
@@ -192,6 +193,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
     else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
 
+    const displayName = driverMap[name].displayName || name;
     const tr = document.createElement("tr");
     tr.className = safeClass(teamUpper);
     tr.innerHTML = `
