--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -137,7 +137,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
     if (!name) return;
 
-    if (!driverMap[name] || currPts > driverMap[name].pts) driverMap[name] = { name, pts: currPts, team };
+    if (!driverMap[name] || currPts > driverMap[name].pts) driverMap[name] = { name, pts: currPts, team, displayName };
     if (!prevDriverMap[name] || prevPts > prevDriverMap[name].pts) prevDriverMap[name] = { name, pts: prevPts };
 
     if (team) {
