--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -77,7 +77,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.52 (Display Name Fix + Arrows Working)</div>
+<div class="version">Version: Beta 0.0.54 (Stable: displayName + Arrow Fix)</div>
 <div class="header">
   <img alt="IFWL Logo" src="ifwl_logo.png"/>
   <h1>IFWL F1 Leaderboard</h1>
