--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -77,7 +77,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.54 (Stable: displayName + Arrow Fix)</div>
+<div class="version">Version: Beta 0.0.52 (Display Name Fix + Arrows Working)</div>
 <div class="header">
   <img alt="IFWL Logo" src="ifwl_logo.png"/>
   <h1>IFWL F1 Leaderboard</h1>
@@ -137,7 +137,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
     if (!name) return;
 
-    if (!driverMap[name] || currPts > driverMap[name].pts) driverMap[name] = { name, pts: currPts, team, displayName };
+    if (!driverMap[compareName] || currPts > driverMap[compareName].pts) driverMap[compareName] = { name: compareName, pts: currPts, team, displayName };
     if (!prevDriverMap[name] || prevPts > prevDriverMap[name].pts) prevDriverMap[name] = { name, pts: prevPts };
 
     if (team) {
@@ -169,7 +169,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
     else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
 
-    const displayName = driverMap[name].displayName || name;
+    const displayName = driverMap[name]?.displayName || name;
     const tr = document.createElement("tr");
     tr.className = safeClass(teamUpper);
     tr.innerHTML = `
@@ -193,7 +193,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
     else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
 
-    const displayName = driverMap[name].displayName || name;
+    const displayName = driverMap[name]?.displayName || name;
     const tr = document.createElement("tr");
     tr.className = safeClass(teamUpper);
     tr.innerHTML = `
