--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -173,7 +173,10 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
     const tr = document.createElement("tr");
     tr.className = safeClass(teamUpper);
     tr.innerHTML = `
-      <td>${displayName}</td>
+      <td>${
+      (driverMap[name]?.displayName.match(/^\[(\d+)\]/) ?
+        `<span class='driver-number'>${driverMap[name].displayName.match(/^\[(\d+)\]/)[1]}</span>` : ''
+      ) + driverMap[name]?.displayName.replace(/^\[\d+\]\s*-\s*/, '')}</td>
       <td>
         <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
         ${team}
