--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -88,7 +88,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.47 (Arrow Size + Ferrari Red Fix)</div>
+<div class="version">Version: Beta 0.0.59 (Driver Number Styling Restored)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -170,7 +170,10 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
     rows.forEach(r => {
       const raw = (r[0] || "") + "";
-      const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
+      const displayName = raw.trim();
+    const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
+    const numberMatch = raw.match(/^\[\s*(\d+)\s*\]/);
+    const driverNumber = numberMatch ? numberMatch[1] : "";
       const team = (r[1] || "").trim();
       const currPts = parseInt(r[18]) || 0;
       const prevPts = getPrevTotal(r);
@@ -214,7 +217,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
-          <td>${name}</td>
+          <td><span class='driver-number'>${driverNumber}</span>${name}</td>
           <td>
             <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
             ${team}
