--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -88,7 +88,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.59 (Driver Number Styling Restored)</div>
+<div class="version">Version: Beta 0.0.60 (Driver Number Scope Fix)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -170,10 +170,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
     rows.forEach(r => {
       const raw = (r[0] || "") + "";
-      const displayName = raw.trim();
-    const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
-    const numberMatch = raw.match(/^\[\s*(\d+)\s*\]/);
-    const driverNumber = numberMatch ? numberMatch[1] : "";
+      const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
       const team = (r[1] || "").trim();
       const currPts = parseInt(r[18]) || 0;
       const prevPts = getPrevTotal(r);
@@ -214,10 +211,13 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
         console.log("Driver:", name, "| Prev Rank:", prevRanks[name], "| Curr Rank:", currRanks[name], "| Diff:", diff);
 
-        const tr = document.createElement("tr");
+        const displayName = driverMap[name].displayName || name;
+    const numberMatch = displayName.match(/^\[\s*(\d+)\s*\]/);
+    const driverNumber = numberMatch ? numberMatch[1] : "";
+    const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
-          <td><span class='driver-number'>${driverNumber}</span>${name}</td>
+          <td><span class='driver-number'>${driverNumber}</span>${displayName.replace(/^\[\s*\d+\s*\]\s*-\s*/, '').trim()}</td>
           <td>
             <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
             ${team}
@@ -241,7 +241,10 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
         console.log("Constructor:", team, "| Prev Rank:", prevCRank[team], "| Curr Rank:", currCRank[team], "| Diff:", diff);
 
-        const tr = document.createElement("tr");
+        const displayName = driverMap[name].displayName || name;
+    const numberMatch = displayName.match(/^\[\s*(\d+)\s*\]/);
+    const driverNumber = numberMatch ? numberMatch[1] : "";
+    const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
           <td>
