--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -88,7 +88,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.62 (Driver Number Scoped in Render Loop)</div>
+<div class="version">Version: Beta 0.0.63 (Safe Trim Fix + Driver Number)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -211,11 +211,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
         console.log("Driver:", name, "| Prev Rank:", prevRanks[name], "| Curr Rank:", currRanks[name], "| Diff:", diff);
 
-        const displayName = entry[0].trim();
-    const numberMatch = displayName.match(/^\[\s*(\d+)\s*\]/);
-    const driverNumber = numberMatch ? numberMatch[1] : "";
-    const nameOnly = displayName.replace(/^\[\s*\d+\s*\]\s*-\s*/, "").trim();
-    const tr = document.createElement("tr");
+        const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
           <td><span class='driver-number'>${driverNumber}</span>${nameOnly}</td>
@@ -242,11 +238,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
 
         console.log("Constructor:", team, "| Prev Rank:", prevCRank[team], "| Curr Rank:", currCRank[team], "| Diff:", diff);
 
-        const displayName = entry[0].trim();
-    const numberMatch = displayName.match(/^\[\s*(\d+)\s*\]/);
-    const driverNumber = numberMatch ? numberMatch[1] : "";
-    const nameOnly = displayName.replace(/^\[\s*\d+\s*\]\s*-\s*/, "").trim();
-    const tr = document.createElement("tr");
+        const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
           <td>
