--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -88,7 +88,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.63 (Safe Trim Fix + Driver Number)</div>
+<div class="version">Version: Beta 0.0.64 (Driver Number Render Fix)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -214,7 +214,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         const tr = document.createElement("tr");
         tr.className = safeClass(teamUpper);
         tr.innerHTML = `
-          <td><span class='driver-number'>${driverNumber}</span>${nameOnly}</td>
+          <td>${name}</td>
           <td>
             <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
             ${team}
