--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -6,6 +6,16 @@
 <meta content="width=device-width,initial-scale=1.0" name="viewport"/>
 <title>IFWL F1 Leaderboard</title>
 <style>
+.driver-number {
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin-right: 0.5rem;
+  font-style: italic;
+  color: black;
+  display: inline-block;
+  min-width: 3rem;
+  text-align: right;
+}
     body {
       margin:0; padding:20px;
       font-family:Arial,sans-serif;
@@ -88,7 +98,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.64 (Driver Number Render Fix)</div>
+<div class="version">Version: Beta 0.0.65 (Driver Number Styling Restored)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
