--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -117,7 +117,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.66 (Driver Number Left of Car)</div>
+<div class="version">Version: Beta 0.0.67 (Driver Number Visible Fix)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
