--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -117,7 +117,7 @@
 </style>
 </head>
 <body>
-<div class="version">Version: Beta 0.0.68 (Fully Working Render + Driver Number)</div>
+<div class="version">Version: Beta 0.0.69 (Safe Match + Name Check)</div>
 <div class="header">
 <img alt="IFWL Logo" src="ifwl_logo.png"/>
 <h1>IFWL F1 Leaderboard</h1>
@@ -189,7 +189,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
       const name = row.c[0]?.v?.trim();
       const team = row.c[1]?.v?.trim().toUpperCase();
       const points = row.c[18]?.v || 0;
-      const numberMatch = name.match(/\[\s?(\d+)\s?\]/);
+      const numberMatch = name ? name.match(/\[\s?(\d+)\s?\]/) : null;
       const driverNumber = numberMatch ? numberMatch[1] : "";
 
       const tr = document.createElement("tr");
@@ -202,7 +202,7 @@ fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts
         <div class="driver-info">
           <span class="driver-number">${driverNumber}</span>
           <img src="${carImg}" class="car-img" />
-          <span class="driver-name">${name.replace(/\[.*?\]\s*-\s*/, "")}</span>
+          <span class="driver-name">${name ? name.replace(/\[.*?\]\s*-\s*/, "") : "Unnamed Driver"}</span>
         </div>
       `;
 
